BG COLOR/NAV/HOVER

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
    </head>
   <body>
       <h1>Johan Aftonstråle</h1>
+   <nav>
       <a href="term1.html">terminologi 1</a>
       <br>
       <a href="term2.html">terminologi 2</a>
+   </nav>
       <br>
       <hr>
       <p>Jag har lärt mig massor, dessutom har jag den bästa läraren någonsin! Sant!</p>
